@@ -18,12 +18,14 @@
 #include "java/lang/Class.h"
 #include "java/lang/String.h"
 #include "java/lang/Throwable.h"
+#include "java/io/PrintWriter.h"
 
 namespace java {
     namespace lang {
 
         enum {
-            mid_printStackTrace,
+            mid_printStackTrace_0,
+            mid_printStackTrace_1,
             mid_getMessage,
             max_mid
         };
@@ -38,9 +40,12 @@ namespace java {
                 jclass cls = env->findClass("java/lang/Throwable");
 
                 _mids = new jmethodID[max_mid];
-                _mids[mid_printStackTrace] = 
+                _mids[mid_printStackTrace_0] = 
                     env->getMethodID(cls, "printStackTrace",
                                      "()V");
+                _mids[mid_printStackTrace_1] = 
+                    env->getMethodID(cls, "printStackTrace",
+                                     "(Ljava/io/PrintWriter;)V");
                 _mids[mid_getMessage] = 
                     env->getMethodID(cls, "getMessage",
                                      "()Ljava/lang/String;");
@@ -53,7 +58,13 @@ namespace java {
 
         void Throwable::printStackTrace() const
         {
-            env->callVoidMethod(this$, _mids[mid_printStackTrace]);
+            env->callVoidMethod(this$, _mids[mid_printStackTrace_0]);
+        }
+        
+        void Throwable::printStackTrace(java::io::PrintWriter writer) const
+        {
+            env->callVoidMethod(this$, _mids[mid_printStackTrace_1],
+                                writer.this$);
         }
         
         String Throwable::getMessage() const
@@ -71,20 +82,39 @@ namespace java {
 namespace java {
     namespace lang {
 
-        static PyObject *t_Throwable_printStackTrace(t_Throwable *self);
+        static PyObject *t_Throwable_printStackTrace(t_Throwable *self,
+                                                     PyObject *args);
 
         static PyMethodDef t_Throwable__methods_[] = {
-            DECLARE_METHOD(t_Throwable, printStackTrace, METH_NOARGS),
+            DECLARE_METHOD(t_Throwable, printStackTrace, METH_VARARGS),
             { NULL, NULL, 0, NULL }
         };
 
-        DECLARE_TYPE(Throwable, t_Throwable, Object, java::lang::Throwable,
+        DECLARE_TYPE(Throwable, t_Throwable, Object, Throwable,
                      abstract_init, 0, 0, 0, 0, 0);
 
-        static PyObject *t_Throwable_printStackTrace(t_Throwable *self)
+        static PyObject *t_Throwable_printStackTrace(t_Throwable *self,
+                                                     PyObject *args)
         {
-            OBJ_CALL(self->object.printStackTrace());
-            Py_RETURN_NONE;
+            switch (PyTuple_Size(args)) {
+              case 0:
+                OBJ_CALL(self->object.printStackTrace());
+                Py_RETURN_NONE;
+              case 1:
+              {
+                  java::io::PrintWriter writer((jobject) NULL);
+
+                  if (!parseArgs(args, "j", java::io::PrintWriter::class$,
+                                 &writer))
+                  {
+                      OBJ_CALL(self->object.printStackTrace(writer));
+                      Py_RETURN_NONE;
+                  }
+              }
+              default:
+                PyErr_SetString(PyExc_ValueError, "invalid args");
+                return NULL;
+            }
         }
     }
 }
