@@ -1332,6 +1332,10 @@ def compile(env, jccPath, output, moduleName, install, dist, debug, jars,
     line(out, 0, 'class JavaError(Exception):')
     line(out, 1, 'def getJavaException(self):')
     line(out, 2, 'return self.args[0]')
+    line(out, 1, 'def __str__(self):')
+    line(out, 2, 'writer = %s.StringWriter()', extname)
+    line(out, 2, 'self.getJavaException().printStackTrace(%s.PrintWriter(writer))', extname)
+    line(out, 2, 'return "\\n".join((super(JavaError, self).__str__(), "    Java stacktrace:", str(writer)))')
     line(out)
     line(out, 0, 'class InvalidArgsError(Exception):')
     line(out, 1, 'pass')
